--- a/css/style.css
+++ b/css/style.css
@@ -2,20 +2,21 @@ body{
     background-color:#f6f8f9;
 }
 .head{
-width: 1200px;
+width: 100%;
 padding-left: 10px;
 background-color: white;
+margin: 0;
 
 }
 h1{
  display: inline-block;
 }
 .corps{
-    margin-top: 60px;
-    margin-left: 250px;
-    margin-right: 250px;
-    width: 700px;
-    background-color: white;
+background-color: white;
+margin-top: 60px;
+margin-right: 250px;
+margin-left: 250px;
+padding: 20px;
 }
 .bottone{
 background-color: rgb(28, 103, 201);
@@ -23,13 +24,37 @@ color: white;
 border: 0ch;
 border-radius: 5px;
 }
-.bottone2{
+.bottone.button{
  width: 100px;
 }
-.bottone1{
-    background-color: rgb(28, 103, 201);
-    color: white;
-    border: 0ch;
-    border-radius: 10px;
+.bottone.bottone1{ background-color: rgb(28, 103, 201);
+color: white;
+border: 0ch;
+border-radius: 10px;
 
+}
+.true{
+border-radius: 50%;
+border: 1px solid green;
+color: green;
+padding: 2px;
+}
+.cross{
+ border-radius: 50%;
+ border: 1px solid red;
+ color: red;
+ padding: 2px;
+
+}
+.bottone.bottone2{
+background-color: purple;
+width: 70px;
+    
+}
+.bottone.bottone3{
+    background-color: green;
+    width: 70px;
+}
+.bottone.bottone4{
+    background-color: orange;
 }
